# bico_gtest_docker

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: docker-image.yml
example_project_under_test/: CMakeLists.txt
example_project_under_test/swc/: CMakeLists.txt
example_project_under_test/swc/UnitName/inc/: UnitName.h
example_project_under_test/swc/UnitName/src/: UnitName.c
example_project_under_test/swc/UnitName/test/gtest/: CMakeLists.txt  test_UnitName.cpp
example_project_under_test/swc/UnitName/test/gtest/mock/: mock_UnitName.c  mock_UnitName.h
example_project_under_test/swc/lib/: lib.c  lib.h
example_project_under_test/swc/simple_calculator/: CMakeLists.txt
example_project_under_test/swc/simple_calculator/config/: simple_calculator_cfg.h
example_project_under_test/swc/simple_calculator/inc/: simple_calculator.h
example_project_under_test/swc/simple_calculator/src/: simple_calculator.c
example_project_under_test/swc/simple_calculator/test/gtest/: CMakeLists.txt  test_simple_calculator.cpp
example_project_under_test/swc/simple_calculator/test/gtest/mock/: mock_simple_calculator.c  mock_simple_calculator.h
misc/: chat.json  lcov_latest_ver.txt  powershell_command.ps1  zzzexecuteCommand.md
tool/: .lcovrc  build.sh  coverage.sh  coverage_wo_delete_build_folder.sh  generate_test_summary.py  rebuild.sh  remove_build_but_googletest_and_fff.sh
